# vercel

./: .ecrc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .flowconfig  .gitattributes  .gitignore  .gitpod.yml  .kodiak.toml  .nowignore  .npmrc  .nvmrc  .prettierignore  .prettierrc  .syncpackrc.json  .travis.yml  .vercel.approvers  .vercelignore  09f12c5ddf387eca.css  2457-5d7ba677aaf87a3f.js.download  3462-7fb59927ad6a701c.js.download  3492d80cf6108218.css  4378-26c5b3ef4efc3f71.js.download  461bea6cc7b8e420.css  4661-218aec0bdee8860d.js.download  4851f55bc838ee6b.css  5005-d574d7bb7ba092c4.js.download  56dbcba7149971ae.css  8dd8233eb3db4ecc.css  95e0f7b6e792fb49.css  :w  :wq  AGENTS.md  Analytics.tsx  Bayor Emmanuel  CI-CD-REDUNDANCIES.md  (+136 more)
.builders/: package.json
.changeset-tmp/: config.json  (+6 more)
crates/vercel_runtime/: Cargo.toml
crates/vercel_runtime/src/: axum.rs  ipc_utils.rs  lib.rs  types.rs
crates/vercel_runtime/src/actix/: mod.rs
crates/vercel_runtime/src/axum/: mod.rs
crates/vercel_runtime/src/ipc/: core.rs  log.rs  metric.rs  mod.rs
examples/actix-web/: Cargo.toml  README.md
examples/actix-web/public/: index.html
examples/actix-web/src/: main.rs
examples/axum/: .gitignore  Cargo.toml  README.md
examples/axum/public/: index.html
examples/axum/src/: main.rs
python/vercel-runtime/: .gitignore  CHANGELOG.md  README.md  package.json  publish.mjs  pyproject.toml  vendor.sh
python/vercel-runtime/patches/: werkzeug-001.patch
python/vercel-runtime/scripts/: vendor.sh
python/vercel-runtime/src/vercel_runtime/: _instrument.py  _tracing.py  asgi.py  background_tasks.py  cache.py  crons.py  dev.py  headers.py  logging_defaults.py  resolver.py  routing.py  task_manager.py  telemetry.py  utils.py  vc_init.py  wait_until.py  workers.py
python/vercel-runtime/src/vercel_runtime/_vendor/: vendor.txt
python/vercel-runtime/src/vercel_runtime/_vendor/click/: _compat.py  core.py  types.py
python/vercel-runtime/src/vercel_runtime/_vendor/h11/: __init__.py
python/vercel-runtime/src/vercel_runtime/_vendor/uvicorn/: LICENSE.md  __init__.py  __main__.py  _compat.py  _subprocess.py  _types.py  config.py  logging.py  main.py  server.py  workers.py
python/vercel-runtime/src/vercel_runtime/_vendor/uvicorn/lifespan/: off.py  on.py
python/vercel-runtime/src/vercel_runtime/_vendor/uvicorn/loops/: auto.py
python/vercel-runtime/src/vercel_runtime/_vendor/uvicorn/middleware/: asgi2.py  message_logger.py  proxy_headers.py  wsgi.py
python/vercel-runtime/src/vercel_runtime/_vendor/uvicorn/protocols/: utils.py
python/vercel-runtime/src/vercel_runtime/_vendor/uvicorn/supervisors/: __init__.py  basereload.py  multiprocess.py  statreload.py  watchfilesreload.py
python/vercel-runtime/src/vercel_runtime/_vendor/werkzeug/: _internal.py  exceptions.py  serving.py  testapp.py  utils.py
python/vercel-runtime/src/vercel_runtime/_vendor/werkzeug/debug/: __init__.py  console.py  repr.py  tbtools.py
python/vercel-runtime/src/vercel_runtime/_vendor/werkzeug/middleware/: lint.py  profiler.py  proxy_fix.py  shared_data.py
python/vercel-runtime/src/vercel_runtime/_vendor/werkzeug/routing/: map.py  rules.py
python/vercel-runtime/src/vercel_runtime/_vendor/wsproto/: handshake.py  utilities.py
python/vercel-runtime/tests/: __init__.py  __main__.py  _cov_wrapper.py  _dist.py  _n1_mock.py  release_smoke_test.py  test_cache_context.py  test_headers.py  test_request_body.py  test_runtime.py  test_sourcecode.py  test_workers.py
python/vercel-runtime/tests/fixtures/: asgi_app.py  asgi_bad_body.py  asgi_bad_start.py  asgi_lifespan_app.py  asgi_repeated_headers.py  asgi_websocket_app.py  background_tasks_asgi_app.py  bad_handler.py  binary_handler.py  cron_async_handler.py  cron_command_entrypoint.py  cron_dunder_main.py  cron_grouped_handler_a.py  cron_grouped_handler_b.py  cron_multi_handler_a.py  cron_multi_handler_b.py  cron_sync_handler.py  http_handler.py  lambda_invoke.py  logging_app.py  loguru_app.py  loguru_custom_app.py  missing_export.py  structlog_app.py  structlog_custom_app.py  wait_until_asgi_app.py  wait_until_http_handler.py  wsgi_app.py  wsgi_closeable_app.py  wsgi_echo_app.py
python/vercel-workers/: .gitignore  CHANGELOG.md  README.md  package.json  publish.mjs  pyproject.toml
python/vercel-workers/examples/apscheduler/: main.py  pyproject.toml  tasks.py  vercel.json
python/vercel-workers/examples/basic/: .gitignore  main.py  pyproject.toml  tasks.py  vercel.json  worker.py
python/vercel-workers/examples/celery/: .gitignore  README.md  main.py  pyproject.toml  tasks.py  vercel.json  worker.py
python/vercel-workers/examples/django/: main.py  manage.py  pyproject.toml  worker.py
python/vercel-workers/examples/django/api/: apps.py  tasks.py  urls.py  views.py
python/vercel-workers/examples/django/config/: asgi.py  settings.py  urls.py  wsgi.py
python/vercel-workers/examples/dramatiq/: README.md  main.py  pyproject.toml  tasks.py  vercel.json  worker.py
python/vercel-workers/src/vercel/workers/: __init__.py  _runtime.py  aio.py  asgi.py  bootstrap.py  callback.py  client.py  exceptions.py  subscriptions.py  types.py  wsgi.py
python/vercel-workers/src/vercel/workers/_internal/: queue_api.py  queue_service.py
python/vercel-workers/src/vercel/workers/_queue/: __init__.py  _transport.py  callback.py  client.py  receive.py  send.py  service.py  subscribe.py  types.py
python/vercel-workers/src/vercel/workers/apscheduler/: __init__.py  _imports.py  _time.py  app.py  executor.py  scheduler.py
python/vercel-workers/src/vercel/workers/celery/: __init__.py  app.py  transport.py  utils.py  worker.py
python/vercel-workers/src/vercel/workers/django/: __init__.py  app.py  backend.py  worker.py
python/vercel-workers/src/vercel/workers/dramatiq/: __init__.py  app.py  broker.py  worker.py
python/vercel-workers/tests/: test_apscheduler_adapter.py  test_celery_adapter.py  test_client_and_callback.py  test_django_adapter.py  test_dramatiq_adapter.py  test_runtime_bridge.py  test_sourcecode.py
(+6790 files in other folders)
