[package]
name = "vercel_runtime"
version = "2.2.0"
edition = "2024"
description = "Vercel Runtime for Rust"
license = "Apache-2.0"
repository = "https://github.com/vercel/vercel"
homepage = "https://vercel.com/docs/runtimes"
keywords = ["vercel", "runtime", "serverless", "rust", "fluid"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
base64 = "0.22"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
tokio-stream = "0.1"
lazy_static = "1.4"
http-body = "1.0"
tower = { version = "0.5", features = ["util"] }

axum = { version = "0.8", optional = true }
axum-streams = { version = "0.24", features = ["json", "text"], optional = true }

actix-web = { version = "4", optional = true }
actix-rt = { version = "2", optional = true }
actix-http = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
axum = ["dep:axum", "dep:axum-streams"]
actix = ["dep:actix-web", "dep:actix-rt", "dep:actix-http"]
