[project]
name = "vercel-runtime"
version = "0.4.1"
license = "Apache-2.0"
license-files = [
  "src/vercel_runtime/_vendor/*/LICEN[CS]E*",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.vendoring]
destination = "src/vercel_runtime/_vendor/"
requirements = "src/vercel_runtime/_vendor/vendor.txt"
namespace = "vercel_runtime._vendor"
protected-files = ["__init__.py", "vendor.txt"]

[tool.vendoring.transformations]
substitute = [
  # support uvicorn's dynamic `import_from_string`
  { match='''"uvicorn\.(lifespan|loops|protocols)\.''', replace='''"vercel_runtime._vendor.uvicorn.\1.''' },
]
drop = [
  "bin/",
  "colorama/tests/",
  "*.so",
]
