[project]
name = "vercel-runtime"
version = "0.4.1"
license = "Apache-2.0"
license-files = [
  "src/vercel_runtime/_vendor/*/LICEN[CS]E*",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright~=1.37.0",
    "mypy~=1.19.0",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "ruff~=0.14.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["vercel_runtime", "tests"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["vercel_runtime._vendor.*"]
ignore_errors = true

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src/vercel_runtime", "tests"]
extraPaths = ["src"]

[[tool.basedpyright.executionEnvironments]]
root = "src/vercel_runtime/_vendor"
typeCheckingMode = "off"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"
exclude = [
    ".github",
    ".git",
    "src/vercel_runtime/_vendor",
]

[tool.ruff.lint]
preview = true
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pycodestyle
    "E",    # error
    "ERA",  # flake8-eradicate
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "G",    # flake8-logging-format
    "I",    # isort
    "N",    # pep8-naming
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PLE",  # pylint-error
    "PLW",  # pylint-warning
    "PLC",  # pylint-convention
    "RUF",  # ruff specific
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # warning
]

extend-ignore = [
    "D203",    # incorrect-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "F541",    # f-string-missing-placeholders
    "PLW1514", # unspecified-encoding (UTF-8 is Python 3 default)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N806",    # allow uppercase variable names (e.g., ValueDep = Depends(...))
    "PLC2701", # allow private imports in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[tool.vendoring]
destination = "src/vercel_runtime/_vendor/"
requirements = "src/vercel_runtime/_vendor/vendor.txt"
namespace = "vercel_runtime._vendor"
protected-files = ["__init__.py", "vendor.txt"]

[tool.vendoring.transformations]
substitute = [
  # support uvicorn's dynamic `import_from_string`
  { match='''"uvicorn\.(lifespan|loops|protocols)\.''', replace='''"vercel_runtime._vendor.uvicorn.\1.''' },
]
drop = [
  "bin/",
  "colorama/tests/",
  "*.so",
]
