[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vercel-workers"
version = "0.0.10"
description = "Python SDK for Vercel Workers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "python-dotenv",
    "vercel>=0.3.7",
]

[project.scripts]
test = "pytest:main"

[project.optional-dependencies]
dev = [
    "ruff~=0.15.1",
    "pytest~=9.0.2",
    "pytest-asyncio",
    "mypy~=1.19.0",
    "basedpyright~=1.37.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]
celery = [
    "celery>=5.3.0",
]
django = [
    "Django>=6.0.0",
]
dramatiq = [
    "dramatiq>=1.14.0",
]
examples = [
    "fastapi",
]
all = [
    "vercel-workers[celery]",
    "vercel-workers[django]",
    "vercel-workers[dramatiq]",
]

[dependency-groups]
test = [
    "ruff~=0.15.1",
    "pytest~=9.0.2",
    "pytest-asyncio",
    "mypy~=1.19.0",
    "basedpyright~=1.37.0",
    "celery>=5.3.0",
    "Django>=6.0.0",
    "dramatiq>=1.14.0",
]

[tool.uv]
default-groups = ["test"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vercel.workers*"]
namespaces = true

[tool.setuptools]
include-package-data = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["vercel"] }

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["src/vercel/workers", "tests"]
extraPaths = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["dramatiq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
