[project]
name = "django-tasks-example"
version = "0.1.0"
description = "Django tasks example using vercel-workers + Vercel Queues"
requires-python = ">=3.12"
dependencies = [
  "django>=6.0",
  "uvicorn>=0.24",
  "vercel-workers",
  "werkzeug>=1.0.1",
]

[tool.uv.sources]
vercel-workers = { workspace = true }

[tool.setuptools]
packages = ["api", "config"]
py-modules = ["worker", "main", "manage"]

[project.scripts]
worker = "worker:main"
