[project]
name = "dramatiq-example"
version = "0.1.0"
description = "Dramatiq example using vercel-workers + Vercel Queues"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "dramatiq>=1.14.0",
    "vercel-workers",
]

[tool.uv.sources]
vercel-workers = { workspace = true }

[tool.setuptools]
py-modules = ["worker", "main", "tasks"]

[project.scripts]
worker = "worker:main"
